# coglet

./: .gitignore  CMakeLists.txt  README.md  ROADMAP.md  notes.txt
cmake/: run_diff_test.cmake  run_lexer_test.cmake  run_output_test.cmake
docs/: compiler.md  grammar.md  language.md  roadmap.md  selfhosting.md  testing.md
include/: ast.h  compiler_driver.h  diag.h  lexer.h  parser.h  parser_diag.h  semantic_anal.h  semantic_info.h  string_decode.h  types.h
include/utils/: arena.h  constant_values.h  flag.h  string_view.h  utils.h
src/: ast.c  ast.h  coglet.c  coglet_test_runner.c  compiler_driver.c  diag.c  diag.h  lexer.c  lexer.h  parser.c  parser.h  parser_diag.c  semantic_anal.c  semantic_anal.h  string_decode.c  types.h
src/utils/: arena.c  arena.h  utils.c  utils.h
test_assets/: test.cog
tests/: file_utils_delete.h
tests/lexer/: 01_basic.cog  01_basic.expected  02_stress.cog  02_stress.expected
tests/parser/: 03_left_assoc.cog  04_multi_stmt.cog  05_modulo_test.cog  05_modulo_test.expected  06_unary_precedence.cog  06_unary_precedence.expected  07_unary_parens.cog  07_unary_parens.expected  08_double_unary.cog  08_double_unary.expected  10_comparison_precedence.cog  10_comparison_precedence.expected  11_equality.expected  12_comparison_chain.cog  12_comparison_chain.expected  13_unary_vs_comparison.cog  13_unary_vs_comparison.expected  15_function_calls_basic.expected
tests/test_assets/: parser_invalid.cog  quick_test.cog  scope_test.cog  semantic_invalid.cog  semantic_valid.cog  test.cog  test_pass.cog
tests/test_assets/lexer/: 01_basic.expected  02_stress.expected
tests/test_assets/lexer/invalid/: 01_unterminated_comment.cog  01_unterminated_comment.stderr.expected  01_unterminated_comment.stdout.expected  02_unterminated_string.cog  02_unterminated_string.stderr.expected  02_unterminated_string.stdout.expected  03_unexpected_character.cog  03_unexpected_character.stderr.expected  03_unexpected_character.stdout.expected  04_bad_character_literal.cog  04_bad_character_literal.stderr.expected  04_bad_character_literal.stdout.expected  05_missing_exponent_digits.cog  05_missing_exponent_digits.stdout.expected  06_missing_signed_exponent_digits.cog  06_missing_signed_exponent_digits.stderr.expected  06_missing_signed_exponent_digits.stdout.expected
tests/test_assets/lexer/valid/: 03_null.cog  03_null.expected  04_bitwise_and_shift_operators.cog  04_bitwise_and_shift_operators.expected  05_scientific_notation.cog  05_scientific_notation.expected
tests/test_assets/parser/: 01_function.cog  01_function.expected  02_aggregates.cog  02_aggregates.expected  03_control_flow.cog  03_control_flow.expected  04_null.cog  04_null.expected  05_bitwise_and_shift_operators.cog  05_bitwise_and_shift_operators.expected  06_readonly_pointers.cog  06_readonly_pointers.expected  diagnostic_growth.cog
tests/test_assets/parser/invalid/: integer_literal_exceeds_u64.cog  integer_literal_exceeds_u64.expected  readonly_non_pointer.cog  readonly_non_pointer.expected  scientific_notation_f64_overflow.cog  scientific_notation_f64_overflow.expected
tests/test_assets/semantic/invalid/arrays/: argument_element_count.cog  argument_element_count.expected  argument_element_type.cog  argument_element_type.expected  assignment_element_count.cog  assignment_element_count.expected  assignment_element_type.cog  assignment_element_type.expected  index_out_of_bounds.cog  index_out_of_bounds.expected  literal_without_context.cog  literal_without_context.expected  return_element_count.cog  return_element_count.expected  return_element_type.cog  return_element_type.expected  temporary_index_target.cog  temporary_index_target.expected
tests/test_assets/semantic/invalid/builtins/: wrapping_call_types.cog  wrapping_call_types.expected  wrapping_constant_call_types.cog  wrapping_constant_call_types.expected  wrapping_known_zero_divisor.cog  wrapping_known_zero_divisor.expected
tests/test_assets/semantic/invalid/casts/: compile_time_argument_range.cog  compile_time_argument_range.expected  compile_time_initializer_range.cog  compile_time_initializer_range.expected  compile_time_return_range.cog  constant_range_and_huge_float.cog  constant_range_and_huge_float.expected  constant_value_oracles.cog  constant_value_oracles.expected  enum_range.cog  enum_range.expected  integer_range.expected  invalid_kind_conversions.cog  invalid_kind_conversions.expected  truncating_integer_types.cog  truncating_integer_types.expected
tests/test_assets/semantic/invalid/control_flow/: break_at_top_level.expected  break_outside_loop.cog  break_outside_loop.expected  continue_at_top_level.expected  continue_outside_loop.cog  continue_outside_loop.expected  missing_return_if.cog  missing_return_switch.cog  missing_return_switch.expected  non_void_loop_can_exit.cog  non_void_loop_can_exit.expected  switch_branch_missing_return.cog  unreachable_after_if.cog  unreachable_after_if.expected  unreachable_after_loop_exit.cog  unreachable_after_loop_exit.expected  unreachable_after_return.cog  unreachable_after_return.expected  unreachable_after_switch.cog  unreachable_after_switch.expected
tests/test_assets/semantic/invalid/declarations/: checked_constant_arithmetic.cog  checked_constant_arithmetic.expected  constant_division_by_zero.cog  constant_division_by_zero.expected  duplicate_declarations.cog  duplicate_declarations.expected  floating_constant_errors.cog  floating_constant_errors.expected  integer_literal_boundaries.cog  integer_literal_boundaries.expected  non_constant_initializer.cog  non_constant_initializer.expected  typed_initializer_mismatch.cog  typed_initializer_mismatch.expected
tests/test_assets/semantic/invalid/definite_assignment/: if_missing_paths.cog  if_missing_paths.expected  loop_exits.cog  loop_exits.expected  loop_may_execute_zero_times.cog  loop_may_execute_zero_times.expected  (+12 more)
tools/: dump_ast.c  dump_tokens.c
tools/ast/: ast_print.c  ast_print.h
tools/tests/: check_semantic_info.c  check_semantics.c  get_expected.sh  semantic_info_verifier.c  semantic_info_verifier.h
(+308 files in other folders)
